Style error message for trigger name, fix alignment for edit icon

--- a/src/client/assets/uxpl/form.less
+++ b/src/client/assets/uxpl/form.less
@@ -23,6 +23,10 @@
     }
   }
 
+  input.ng-invalid {
+    border-bottom-color: @scarlet;
+  }
+
   label {
     position: absolute;
     left: 0;
@@ -48,4 +52,10 @@
       z-index: 2;
     }
   }
+
+  input:disabled {
+    border-bottom-style: dashed;
+    border-bottom-style: @color-medium-gray;
+  }
+
 }
