--- a/src/client/flogo/flow/triggers/configurator/trigger-detail/settings/field-error/field-error.component.less
+++ b/src/client/flogo/flow/triggers/configurator/trigger-detail/settings/field-error/field-error.component.less
@@ -1,5 +1,5 @@
+@import (reference) '../shared/form-error';
+
 :host {
-  color: #d0021b;
-  font-size: 0.75rem;
-  margin-top: 0.25rem;
+  .field-error-message;
 }
