--- a/src/client/flogo/flow/triggers/configurator/trigger-detail/settings/settings.component.less
+++ b/src/client/flogo/flow/triggers/configurator/trigger-detail/settings/settings.component.less
@@ -1,5 +1,6 @@
 @import '../../../../../../assets/_variables';
 @import '../../../../../../assets/uxpl/form';
+@import './shared/form-error';
 
 :host {
   flex: 1;
@@ -51,7 +52,7 @@ monaco-editor {
 
   .settings-icon__edit {
     position: absolute;
-    top: 1em;
+    top: 0.65em;
     z-index: 2;
   }
 }
