--- a/src/client/flogo/flow/triggers/configurator/trigger-detail/settings/shared/form-common-styles.less
+++ b/src/client/flogo/flow/triggers/configurator/trigger-detail/settings/shared/form-common-styles.less
@@ -20,6 +20,7 @@
 .settings-label {
   font-size: 1em;
   color: @warm-grey;
+  position: relative;
 }
 
 .settings-field {
@@ -29,6 +30,10 @@
   padding: 10px;
   border-radius: 3px;
   border: solid 1px @color-medium-gray;
+
+  &:disabled {
+    background-color: #eee;
+  }
 
   &.ng-invalid {
     border-color: @scarlet;
@@ -55,10 +60,16 @@
   font-size: 18px;
   text-align: right;
   color: @warm-grey;
-  position: relative;
-  top: 2em;
-  right: 5px;
+  position: absolute;
+  padding: 0.5em;
+  top: 1.65em;
+  right: 0.1em;
   cursor: pointer;
   opacity: 0;
   transition: opacity 150ms;
+
+  &:hover, &:active {
+    color: @cerulean;
+  }
+
 }
